--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,27 @@
-.App {
-  text-align: center;
+body{
+  margin:0 auto;
+  width:100%;
+  max-width:800px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.soccer-players{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:space-between;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.soccer-player{
+  border:1px solid black;
+  width:30%;
+  height:90px;
+  text-align:center;
+  margin:10px 0;
+  box-shadow: 0 15px 15px rgba(0,0 ,0, .25);
+  border-radius:20px;
 }
-
-.App-link {
-  color: #61dafb;
+.player{
+  font-size:1.2rem;
+  margin-bottom:0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.country{
+  font-size:1.1rem;
 }
