--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,19 @@ body{
   width:100%;
   max-width:800px;
 }
+.container{
+  text-align:center;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+}
+.container h1{
+  font-size:2.5rem;
+}
 
 .soccer-players{
+  border-top:1px solid black;
+  padding:20px;
   display:flex;
   flex-wrap:wrap;
   justify-content:space-between;
@@ -24,4 +35,11 @@ body{
 }
 .country{
   font-size:1.1rem;
+}
+.search-results{
+  border:2px solid blue;
+  width:200px;
+  text-align:center;
+  border-radius:20px;
+  margin:20px auto;
 }
